[metadata]
name = string-kernels
version = 0.0.4
author = Helgi Hilmarsson
author_email = helgi37@gmail.com
description = Polynomial String Kernel and linear time String Kernel. Supports multithreading and is compatible with Scikit-Learn SVMs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/weekend37/string-kernels
project_urls =
    Bug Tracker = https://github.com/weekend37/string-kernels/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Academic Free License (AFL)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
